gccida/c3/dequeue_and_dump
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:723:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:729:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:733:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:734:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:744:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:796:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v83; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:949:23: error: use of undeclared identifier 'off_737CD7'
v12 = ( const char *)&off_737CD7; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:959:22: error: expected expression
v16 = *( tree_node **)( key + 64); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:959:10: error: use of undeclared identifier 'tree_node'
v16 = *( tree_node **)( key + 64); 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:975:24: error: use of undeclared identifier 'off_737CC6'
fprintf( di_0->stream, off_737CC6, v15, 6657907LL); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:981:24: error: use of undeclared identifier 'asc_737CC5'
fprintf( di_0->stream, asc_737CC5, 25LL, 6657907LL); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:1007:22: error: expected expression
v10 = *( tree_node **)( key + 40); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:1007:10: error: use of undeclared identifier 'tree_node'
v10 = *( tree_node **)( key + 40); 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:1022:22: error: expected expression
v10 = *( tree_node **)( key + 32); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:1022:10: error: use of undeclared identifier 'tree_node'
v10 = *( tree_node **)( key + 32); 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:1027:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( lang_hooks_0.tree_dump.dump_tree( di_0, ( tree)key) ) 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:1027:38: error: called object type '<dependent type>' is not a function or function pointer
if ( lang_hooks_0.tree_dump.dump_tree( di_0, ( tree)key) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:1043:22: error: expected expression
v16 = *( tree_node **)( key + 40); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/tree-dump.c:1043:10: error: use of undeclared identifier 'tree_node'
v16 = *( tree_node **)( key + 40); 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dequeue_and_dump/src/obj/tree-dump.o] Error 1
